crates/deadline-cli/tests/cli/snapshots/cli__queue_paramdefs__queue_paramdefs_one_env_one_param.snap
---
source: crates/deadline-cli/tests/cli/queue_paramdefs.rs
info:
  program: deadline
  args:
    - queue
    - paramdefs
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61751"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61751"
    AWS_ENDPOINT_URL_STS: "http://localhost:61751"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpXXDL4h/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpXXDL4h
---
success: true
exit_code: 0
----- stdout -----
- name: Cores
  type: INT
  default: '4'
  userInterface:
    control: SPIN_BOX
    groupLabel: 'Queue Environment: Render Env'


----- stderr -----
